--- a/p1_data_modeling_postgres/test.ipynb
+++ b/p1_data_modeling_postgres/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,54 +11,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: student@sparkifydb'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql postgresql://student:student@127.0.0.1/sparkifydb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>songplay_id</th>\n",
+       "        <th>start_time</th>\n",
+       "        <th>user_id</th>\n",
+       "        <th>level</th>\n",
+       "        <th>song_id</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>session_id</th>\n",
+       "        <th>location</th>\n",
+       "        <th>user_agent</th>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM songplays LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>user_id</th>\n",
+       "        <th>first_name</th>\n",
+       "        <th>last_name</th>\n",
+       "        <th>gender</th>\n",
+       "        <th>level</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>10</td>\n",
+       "        <td>Sylvie</td>\n",
+       "        <td>Cruz</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>100</td>\n",
+       "        <td>Adler</td>\n",
+       "        <td>Barrera</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>12</td>\n",
+       "        <td>Austin</td>\n",
+       "        <td>Rosales</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>14</td>\n",
+       "        <td>Theodore</td>\n",
+       "        <td>Harris</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>26</td>\n",
+       "        <td>Ryan</td>\n",
+       "        <td>Smith</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(10, 'Sylvie', 'Cruz', 'F', 'free'),\n",
+       " (100, 'Adler', 'Barrera', 'M', 'free'),\n",
+       " (12, 'Austin', 'Rosales', 'M', 'free'),\n",
+       " (14, 'Theodore', 'Harris', 'M', 'free'),\n",
+       " (26, 'Ryan', 'Smith', 'M', 'free')]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM users LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>song_id</th>\n",
+       "        <th>title</th>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>year</th>\n",
+       "        <th>duration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>SOBBUGU12A8C13E95D</td>\n",
+       "        <td>Setting Fire to Sleeping Giants</td>\n",
+       "        <td>ARMAC4T1187FB3FA4C</td>\n",
+       "        <td>2004</td>\n",
+       "        <td>207.77751</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('SOBBUGU12A8C13E95D', 'Setting Fire to Sleeping Giants', 'ARMAC4T1187FB3FA4C', 2004, 207.77751)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM songs LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "1 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>artist_id</th>\n",
+       "        <th>name</th>\n",
+       "        <th>location</th>\n",
+       "        <th>lattitude</th>\n",
+       "        <th>longitude</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARMAC4T1187FB3FA4C</td>\n",
+       "        <td>The Dillinger Escape Plan</td>\n",
+       "        <td>Morris Plains, NJ</td>\n",
+       "        <td>40.82624</td>\n",
+       "        <td>-74.47995</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('ARMAC4T1187FB3FA4C', 'The Dillinger Escape Plan', 'Morris Plains, NJ', 40.82624, -74.47995)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM artists LIMIT 5;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql://student:***@127.0.0.1/sparkifydb\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>start_time</th>\n",
+       "        <th>hour</th>\n",
+       "        <th>day</th>\n",
+       "        <th>week</th>\n",
+       "        <th>month</th>\n",
+       "        <th>year</th>\n",
+       "        <th>weekday</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-12 02:37:38.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>12</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-12 02:37:44.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>12</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-12 02:42:21.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>12</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-12 02:45:52.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>12</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-12 02:47:22.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>12</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Monday</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(datetime.datetime(2018, 11, 12, 2, 37, 38, 796000), 2, 12, 46, 11, 2018, 'Monday'),\n",
+       " (datetime.datetime(2018, 11, 12, 2, 37, 44, 796000), 2, 12, 46, 11, 2018, 'Monday'),\n",
+       " (datetime.datetime(2018, 11, 12, 2, 42, 21, 796000), 2, 12, 46, 11, 2018, 'Monday'),\n",
+       " (datetime.datetime(2018, 11, 12, 2, 45, 52, 796000), 2, 12, 46, 11, 2018, 'Monday'),\n",
+       " (datetime.datetime(2018, 11, 12, 2, 47, 22, 796000), 2, 12, 46, 11, 2018, 'Monday')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql SELECT * FROM time LIMIT 5;"
    ]
