--- a/p1_data_modeling_postgres/archive/test.ipynb
+++ b/p1_data_modeling_postgres/archive/test.ipynb
@@ -82,7 +82,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -96,10 +96,49 @@
        "        <th>gender</th>\n",
        "        <th>level</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>10</td>\n",
+       "        <td>Sylvie</td>\n",
+       "        <td>Cruz</td>\n",
+       "        <td>F</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>100</td>\n",
+       "        <td>Adler</td>\n",
+       "        <td>Barrera</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>12</td>\n",
+       "        <td>Austin</td>\n",
+       "        <td>Rosales</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>14</td>\n",
+       "        <td>Theodore</td>\n",
+       "        <td>Harris</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>26</td>\n",
+       "        <td>Ryan</td>\n",
+       "        <td>Smith</td>\n",
+       "        <td>M</td>\n",
+       "        <td>free</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(10, 'Sylvie', 'Cruz', 'F', 'free'),\n",
+       " (100, 'Adler', 'Barrera', 'M', 'free'),\n",
+       " (12, 'Austin', 'Rosales', 'M', 'free'),\n",
+       " (14, 'Theodore', 'Harris', 'M', 'free'),\n",
+       " (26, 'Ryan', 'Smith', 'M', 'free')]"
       ]
      },
      "execution_count": 4,
@@ -167,7 +206,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "1 rows affected.\n"
      ]
     },
     {
@@ -181,10 +220,17 @@
        "        <th>lattitude</th>\n",
        "        <th>longitude</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>ARMAC4T1187FB3FA4C</td>\n",
+       "        <td>The Dillinger Escape Plan</td>\n",
+       "        <td>Morris Plains, NJ</td>\n",
+       "        <td>40.82624</td>\n",
+       "        <td>-74.47995</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[('ARMAC4T1187FB3FA4C', 'The Dillinger Escape Plan', 'Morris Plains, NJ', 40.82624, -74.47995)]"
       ]
      },
      "execution_count": 6,
@@ -206,7 +252,7 @@
      "output_type": "stream",
      "text": [
       " * postgresql://student:***@127.0.0.1/sparkifydb\n",
-      "0 rows affected.\n"
+      "5 rows affected.\n"
      ]
     },
     {
@@ -222,10 +268,59 @@
        "        <th>year</th>\n",
        "        <th>weekday</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-12 02:37:38.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>12</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-12 02:37:44.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>12</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-12 02:42:21.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>12</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-12 02:45:52.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>12</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Monday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2018-11-12 02:47:22.796000</td>\n",
+       "        <td>2</td>\n",
+       "        <td>12</td>\n",
+       "        <td>46</td>\n",
+       "        <td>11</td>\n",
+       "        <td>2018</td>\n",
+       "        <td>Monday</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[]"
+       "[(datetime.datetime(2018, 11, 12, 2, 37, 38, 796000), 2, 12, 46, 11, 2018, 'Monday'),\n",
+       " (datetime.datetime(2018, 11, 12, 2, 37, 44, 796000), 2, 12, 46, 11, 2018, 'Monday'),\n",
+       " (datetime.datetime(2018, 11, 12, 2, 42, 21, 796000), 2, 12, 46, 11, 2018, 'Monday'),\n",
+       " (datetime.datetime(2018, 11, 12, 2, 45, 52, 796000), 2, 12, 46, 11, 2018, 'Monday'),\n",
+       " (datetime.datetime(2018, 11, 12, 2, 47, 22, 796000), 2, 12, 46, 11, 2018, 'Monday')]"
       ]
      },
      "execution_count": 7,
