first working version

--- a/p1_data_modeling_postgres/etl_v1.ipynb
+++ b/p1_data_modeling_postgres/etl_v1.ipynb
@@ -2575,7 +2575,9 @@
    "source": [
     "Run `test.ipynb` to see if you've successfully added records to this table. &mdash; NOT COMPLETED\n",
     "#### **NOTE:**\n",
-    "After much troubleshooting and research, I confirmed that none of the songs in the first log file match any of the songs in the song files (and in turn, the `songs` table). This appears to be an error in the project setup and/or instructions provided by Udacity as recognized [here in the forum](https://knowledge.udacity.com/questions/37605). Perhaps one of the other log files contains matching songs. Testing this requires you to loop through all of the log files &mdash; which we'll do in the next step when creating `etl.py`.\n",
+    "After much troubleshooting and research, I confirmed that none of the songs in the first log file match any of the songs in the song files (and in turn, the `songs` table). This appears to be an error in the project setup and/or instructions provided by Udacity as recognized [here in the forum](https://knowledge.udacity.com/questions/37605). \n",
+    "\n",
+    "Perhaps one of the other log files contains matching songs. Testing this requires you to loop through all of the log files, which we'll do in the next step when creating `etl.py`.\n",
     "\n",
     "For now, the cell above shows that zero matching records are found even if you only match on `songs.title` = `row.song`.\n",
     "\n",
