--- a/p1_data_modeling_postgres/etl.ipynb
+++ b/p1_data_modeling_postgres/etl.ipynb
@@ -470,7 +470,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|█▎        | 9/71 [00:00<00:00, 89.73it/s]"
+      "  7%|▋         | 5/71 [00:00<00:01, 44.91it/s]"
      ]
     },
     {
@@ -484,7 +484,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 71/71 [00:00<00:00, 96.06it/s]\n"
+      "100%|██████████| 71/71 [00:00<00:00, 78.85it/s]\n"
      ]
     }
    ],
@@ -735,7 +735,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|█▎        | 9/71 [00:00<00:00, 86.03it/s]"
+      "  7%|▋         | 5/71 [00:00<00:01, 43.68it/s]"
      ]
     },
     {
@@ -749,7 +749,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 71/71 [00:00<00:00, 85.18it/s]\n"
+      "100%|██████████| 71/71 [00:00<00:00, 76.83it/s]\n"
      ]
     }
    ],
@@ -876,7 +876,7 @@
     "\n",
     "Based on the ordering above, this is `log_files[24]` not `log_files[0]`.\n",
     "\n",
-    "However, in the steps below I continue forward with `log_files[0]` to demonstrate the issue and how I resolved it."
+    "However, in the steps below I continue forward with the first log file (`log_files[0] => 2018-11-12-events.json`) to demonstrate the issue and how I resolved it."
    ]
   },
   {
@@ -2784,14 +2784,15 @@
      "text": [
       "\n",
       "---------\n",
-      "log records checked = 166\n",
+      "total log records checked in this file = 166\n",
       "total rows inserted = 0\n"
      ]
     }
    ],
    "source": [
-    "# counter\n",
+    "# counters\n",
     "log_records_checked = 0\n",
+    "songplay_rows_inserted = 0\n",
     "\n",
     "for index, row in next_song_df.iterrows():\n",
     "    # get songid and artistid from song and artist tables\n",
@@ -2805,17 +2806,16 @@
     "        songid, artistid = None, None \n",
     "\n",
     "    # insert songplay record if there is a matching song between log file and songs table\n",
-    "    rows_inserted = 0\n",
     "    if songid:\n",
     "        songplay_data = (row.ts, row.userId, row.level, songid, artistid, row.sessionId, row.location, row.userAgent)\n",
     "        cur.execute(songplay_table_insert, songplay_data)\n",
     "        conn.commit()\n",
-    "        rows_inserted += 1\n",
-    "        print('row inserted: {}'.format(songplay_data))\n",
+    "        songplay_rows_inserted += 1\n",
+    "        print('\\nsongplay row inserted: \\n[{}] {}\\n'.format(index, songplay_data))\n",
     "\n",
     "# verify records checked vs. inserted        \n",
-    "print('\\n---------\\nlog records checked = {}'.format(log_records_checked))\n",
-    "print('total rows inserted = {}'.format(rows_inserted))"
+    "print('\\n---------\\ntotal log records checked in this file = {}'.format(log_records_checked))\n",
+    "print('total rows inserted = {}'.format(songplay_rows_inserted))"
    ]
   },
   {
@@ -2928,7 +2928,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/30 [00:00<?, ?it/s]"
+      "  3%|▎         | 1/30 [00:00<00:03,  7.89it/s]"
      ]
     },
     {
@@ -2947,7 +2947,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  7%|▋         | 2/30 [00:00<00:02, 11.08it/s]"
+      " 10%|█         | 3/30 [00:00<00:03,  8.62it/s]"
      ]
     },
     {
@@ -2958,20 +2958,7 @@
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-18-events.json\n",
       "log records checked = 138\n",
-      "total rows inserted = 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 13%|█▎        | 4/30 [00:00<00:02, 11.98it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "total rows inserted = 0\n",
       "\n",
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-04-events.json\n",
@@ -2988,7 +2975,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 17%|█▋        | 5/30 [00:00<00:02,  9.85it/s]"
+      " 20%|██        | 6/30 [00:00<00:03,  7.50it/s]"
      ]
     },
     {
@@ -2999,6 +2986,11 @@
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-27-events.json\n",
       "log records checked = 256\n",
+      "total rows inserted = 0\n",
+      "\n",
+      "---------\n",
+      "filepath: /home/workspace/data/log_data/2018/11/2018-11-29-events.json\n",
+      "log records checked = 319\n",
       "total rows inserted = 0\n"
      ]
     },
@@ -3006,7 +2998,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 6/30 [00:00<00:03,  7.91it/s]"
+      " 23%|██▎       | 7/30 [00:00<00:03,  6.45it/s]"
      ]
     },
     {
@@ -3015,26 +3007,7 @@
      "text": [
       "\n",
       "---------\n",
-      "filepath: /home/workspace/data/log_data/2018/11/2018-11-29-events.json\n",
-      "log records checked = 319\n",
-      "total rows inserted = 0\n",
-      "\n",
-      "---------\n",
-      "filepath: /home/workspace/data/log_data/2018/11/2018-11-05-events.json"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 23%|██▎       | 7/30 [00:00<00:03,  6.69it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "filepath: /home/workspace/data/log_data/2018/11/2018-11-05-events.json\n",
       "log records checked = 356\n",
       "total rows inserted = 0\n"
      ]
@@ -3043,7 +3016,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 9/30 [00:01<00:03,  5.93it/s]"
+      " 30%|███       | 9/30 [00:01<00:03,  5.58it/s]"
      ]
     },
     {
@@ -3066,7 +3039,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 37%|███▋      | 11/30 [00:01<00:03,  5.41it/s]"
+      " 37%|███▋      | 11/30 [00:01<00:03,  5.15it/s]"
      ]
     },
     {
@@ -3089,7 +3062,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 13/30 [00:01<00:02,  6.31it/s]"
+      " 43%|████▎     | 13/30 [00:01<00:02,  6.80it/s]"
      ]
     },
     {
@@ -3112,7 +3085,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 53%|█████▎    | 16/30 [00:02<00:02,  6.87it/s]"
+      " 47%|████▋     | 14/30 [00:02<00:02,  6.21it/s]"
      ]
     },
     {
@@ -3128,57 +3101,52 @@
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-02-events.json\n",
       "log records checked = 155\n",
-      "total rows inserted = 0\n",
+      "total rows inserted = 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 53%|█████▎    | 16/30 [00:02<00:02,  6.95it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-07-events.json\n",
       "log records checked = 174\n",
-      "total rows inserted = 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 60%|██████    | 18/30 [00:02<00:01,  6.96it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "total rows inserted = 0\n",
       "\n",
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-17-events.json\n",
       "log records checked = 127\n",
-      "total rows inserted = 0\n",
+      "total rows inserted = 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 63%|██████▎   | 19/30 [00:02<00:01,  6.34it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-28-events.json\n",
       "log records checked = 363\n",
-      "total rows inserted = 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 67%|██████▋   | 20/30 [00:02<00:01,  6.22it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "total rows inserted = 0\n",
       "\n",
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-30-events.json\n",
       "log records checked = 330\n",
-      "total rows inserted = 0\n",
-      "\n",
-      "---------\n",
-      "filepath: /home/workspace/data/log_data/2018/11/2018-11-24-events.json\n",
-      "log records checked = 314\n",
       "total rows inserted = 0\n"
      ]
     },
@@ -3186,13 +3154,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 77%|███████▋  | 23/30 [00:03<00:00,  8.08it/s]"
+      " 70%|███████   | 21/30 [00:03<00:01,  6.41it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "---------\n",
+      "filepath: /home/workspace/data/log_data/2018/11/2018-11-24-events.json\n",
+      "log records checked = 314\n",
+      "total rows inserted = 0\n",
       "\n",
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-26-events.json\n",
@@ -3202,11 +3175,6 @@
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-10-events.json\n",
       "log records checked = 87\n",
-      "total rows inserted = 0\n",
-      "\n",
-      "---------\n",
-      "filepath: /home/workspace/data/log_data/2018/11/2018-11-03-events.json\n",
-      "log records checked = 100\n",
       "total rows inserted = 0\n"
      ]
     },
@@ -3214,13 +3182,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 24/30 [00:03<00:00,  7.47it/s]"
+      " 80%|████████  | 24/30 [00:03<00:00,  7.21it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "---------\n",
+      "filepath: /home/workspace/data/log_data/2018/11/2018-11-03-events.json\n",
+      "log records checked = 100\n",
+      "total rows inserted = 0\n",
       "\n",
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-19-events.json\n",
@@ -3237,7 +3210,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 27/30 [00:03<00:00,  6.75it/s]"
+      " 87%|████████▋ | 26/30 [00:03<00:00,  7.09it/s]"
      ]
     },
     {
@@ -3249,11 +3222,6 @@
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-21-events.json\n",
       "log records checked = 437\n",
-      "total rows inserted = 0\n",
-      "\n",
-      "---------\n",
-      "filepath: /home/workspace/data/log_data/2018/11/2018-11-16-events.json\n",
-      "log records checked = 319\n",
       "total rows inserted = 0\n"
      ]
     },
@@ -3261,7 +3229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 30/30 [00:03<00:00,  7.61it/s]"
+      " 93%|█████████▎| 28/30 [00:04<00:00,  6.45it/s]"
      ]
     },
     {
@@ -3270,9 +3238,27 @@
      "text": [
       "\n",
       "---------\n",
+      "filepath: /home/workspace/data/log_data/2018/11/2018-11-16-events.json\n",
+      "log records checked = 319\n",
+      "total rows inserted = 0\n",
+      "\n",
+      "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-09-events.json\n",
       "log records checked = 252\n",
-      "total rows inserted = 0\n",
+      "total rows inserted = 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 30/30 [00:04<00:00,  7.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "---------\n",
       "filepath: /home/workspace/data/log_data/2018/11/2018-11-22-events.json\n",
@@ -3301,7 +3287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -3311,7 +3297,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 52,
      "metadata": {
       "image/png": {
        "width": 950
@@ -3335,7 +3321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
