--- a/p1_data_modeling_postgres/etl.ipynb
+++ b/p1_data_modeling_postgres/etl.ipynb
@@ -470,7 +470,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  7%|▋         | 5/71 [00:00<00:01, 44.91it/s]"
+      " 10%|▉         | 7/71 [00:00<00:01, 63.27it/s]"
      ]
     },
     {
@@ -484,7 +484,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 71/71 [00:00<00:00, 78.85it/s]\n"
+      "100%|██████████| 71/71 [00:00<00:00, 83.89it/s]\n"
      ]
     }
    ],
@@ -735,7 +735,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  7%|▋         | 5/71 [00:00<00:01, 43.68it/s]"
+      "  8%|▊         | 6/71 [00:00<00:01, 54.67it/s]"
      ]
     },
     {
@@ -749,7 +749,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 71/71 [00:00<00:00, 76.83it/s]\n"
+      "100%|██████████| 71/71 [00:00<00:00, 75.64it/s]\n"
      ]
     }
    ],
@@ -1650,6 +1650,28 @@
    "outputs": [],
    "source": [
     "time_data = [t, t.dt.hour, t.dt.day, t.dt.weekofyear, t.dt.month, t.dt.year, t.dt.day_name()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1541990258796000000, 2, 12, 46, 11, 2018, 'Monday']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# preview slice\n",
+    "\n",
+    "[time_data[i].values.tolist()[0] for i in range(len(time_data))]"
    ]
   },
   {
