--- a/p2_data_modeling_cassandra/cassandra_etl.ipynb
+++ b/p2_data_modeling_cassandra/cassandra_etl.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/workspace\n"
+     ]
+    }
+   ],
    "source": [
     "# checking your current working directory\n",
     "print(os.getcwd())\n",
@@ -74,9 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total rows from CSV source files: 8056\n",
+      "\n",
+      "sample:\n",
+      "[['Rokia TraorÃ\\x83Â©', 'Logged In', 'Stefany', 'F', '0', 'White', '274.88608', 'free', 'Lubbock, TX', 'PUT', 'NextSong', '1.54071E+12', '693', 'Zen', '200', '1.54251E+12', '83']]\n"
+     ]
+    }
+   ],
    "source": [
     "# initiating an empty list of rows that will be generated from each file\n",
     "full_data_rows_list = [] \n",
@@ -92,13 +111,14 @@
     "        \n",
     " # extracting each data row one by one and append it        \n",
     "        for line in csvreader:\n",
-    "            #print(line)\n",
+    "#             print(line)\n",
     "            full_data_rows_list.append(line) \n",
     "            \n",
     "# uncomment the code below if you would like to get total number of rows \n",
-    "#print(len(full_data_rows_list))\n",
+    "print('total rows from CSV source files: {}'.format(len(full_data_rows_list)))\n",
+    "\n",
     "# uncomment the code below if you would like to check to see what the list of event data rows will look like\n",
-    "#print(full_data_rows_list)\n",
+    "print('\\nsample:\\n{}'.format(full_data_rows_list[0:1]))\n",
     "\n",
     "# creating a smaller event data csv file called event_datafile_full csv that will be used to insert data into the \\\n",
     "# Apache Cassandra tables\n",
@@ -116,22 +136,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rows inserted into new CSV file: 6821\n"
+     ]
+    }
+   ],
    "source": [
     "# check the number of rows in your csv file\n",
     "with open('event_datafile_new.csv', 'r', encoding = 'utf8') as f:\n",
-    "    print(sum(1 for line in f))"
+    "    print('rows inserted into new CSV file: {}'.format(sum(1 for line in f)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
     "\n",
-    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "### Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -165,7 +194,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make a connection to a Cassandra instance your local machine \n",
+    "\n",
+    "from cassandra.cluster import Cluster\n",
+    "try: \n",
+    "    cluster = Cluster(['127.0.0.1']) #If you have a locally installed Apache Cassandra instance\n",
+    "    session = cluster.connect()\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,11 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace "
+    "# TO-DO: Create a Keyspace \n",
+    "\n",
+    "try:\n",
+    "    session.execute(\"\"\"\n",
+    "    CREATE KEYSPACE IF NOT EXISTS sparkifydb \n",
+    "    WITH REPLICATION = \n",
+    "    { 'class' : 'SimpleStrategy', 'replication_factor' : 1 }\"\"\"\n",
+    ")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(e)\n"
    ]
   },
   {
@@ -204,18 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n"
+    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
+    "\n",
+    "try:\n",
+    "    session.set_keyspace('sparkifydb')\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
+    "#### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
    ]
   },
   {
@@ -224,33 +284,40 @@
    "source": [
     "## Create queries to ask the following three questions of the data\n",
     "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "#### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
     "\n",
     "\n",
-    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "#### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
     "    \n",
     "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "#### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
     "## sessionId = 338, and itemInSession = 4\n",
     "\n",
+    "query = \"CREATE TABLE IF NOT EXISTS song_in_session \"\n",
+    "query = query + \"(session_id INT, item_in_session INT, artist_name VARCHAR, song_title VARCHAR, song_duration DECIMAL, \\\n",
+    "PRIMARY KEY (session_id, item_in_session))\"\n",
     "\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
     "                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -264,11 +331,11 @@
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
     "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"<ENTER INSERT STATEMENT HERE>\"\n",
-    "        query = query + \"<ASSIGN VALUES HERE>\"\n",
+    "        query = \"INSERT INTO song_in_session (session_id, item_in_session, artist_name, song_title, song_duration)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s)\"\n",
     "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[#], line[#]))"
+    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
    ]
   },
   {
@@ -280,13 +347,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "338 4 Faithless Music Matters (Mark Knight Dub) 495.3073\n"
+     ]
+    }
+   ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table"
+    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "\n",
+    "query = \"select * from song_in_session WHERE session_id=338 AND item_in_session=4\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print (row.session_id, row.item_in_session, row.artist_name, row.song_title, row.song_duration)"
    ]
   },
   {
@@ -353,10 +437,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query1 = \"drop table song_in_session\"\n",
+    "query2 = \"drop table song_in_users\"\n",
+    "query3 = \"drop table song_title\"\n",
+    "\n",
+    "try:\n",
+    "    rows1 = session.execute(query1)\n",
+    "#     rows2 = session.execute(query2)\n",
+    "#     rows3 = session.execute(query3)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
