completed second query

--- a/p2_data_modeling_cassandra/cassandra_etl.ipynb
+++ b/p2_data_modeling_cassandra/cassandra_etl.ipynb
@@ -209,22 +209,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This should make a connection to a Cassandra instance your local machine \n",
-    "# (127.0.0.1)\n",
-    "\n",
-    "from cassandra.cluster import Cluster\n",
-    "cluster = Cluster()\n",
-    "\n",
-    "# To establish connection and begin executing queries, need a session\n",
-    "session = cluster.connect()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace \n",
+    "# create a keyspace \n",
     "\n",
     "try:\n",
     "    session.execute(\"\"\"\n",
@@ -263,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
+    "# set KEYSPACE to the keyspace specified above\n",
     "\n",
     "try:\n",
     "    session.set_keyspace('sparkifydb')\n",
@@ -284,15 +268,23 @@
    "source": [
     "## Create queries to ask the following three questions of the data\n",
     "\n",
-    "#### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "##### 1. Give the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
     "\n",
     "\n",
-    "#### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "##### 2. Give only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
     "    \n",
     "\n",
-    "#### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "##### 3. Give every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query 1\n",
+    "##### Give the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession = 4"
    ]
   },
   {
@@ -301,8 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
+    "# create table\n",
     "\n",
     "query = \"CREATE TABLE IF NOT EXISTS song_in_session \"\n",
     "query = query + \"(session_id INT, item_in_session INT, artist_name VARCHAR, song_title VARCHAR, song_duration DECIMAL, \\\n",
@@ -311,8 +302,7 @@
     "try:\n",
     "    session.execute(query)\n",
     "except Exception as e:\n",
-    "    print(e)\n",
-    "                    "
+    "    print(e)               "
    ]
   },
   {
@@ -323,26 +313,17 @@
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
+    "# insert data\n",
+    "\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
     "        query = \"INSERT INTO song_in_session (session_id, item_in_session, artist_name, song_title, song_duration)\"\n",
     "        query = query + \"VALUES (%s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
     "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Do a SELECT to verify that the data have been inserted into each table"
    ]
   },
   {
@@ -361,7 +342,7 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "# verify the data was entered into the table\n",
     "\n",
     "query = \"select * from song_in_session WHERE session_id=338 AND item_in_session=4\"\n",
     "try:\n",
@@ -377,7 +358,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
+    "### Query 2\n",
+    "##### Give only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create table\n",
+    "\n",
+    "query = \"CREATE TABLE IF NOT EXISTS song_in_user_session \"\n",
+    "query = query + \"(user_id INT, session_id INT, artist_name VARCHAR, song_title VARCHAR, user_first_name VARCHAR, \\\n",
+    "user_last_name VARCHAR, PRIMARY KEY (user_id, session_id))\"\n",
+    "\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insert data\n",
+    "\n",
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "        query = \"INSERT INTO song_in_user_session (user_id, session_id, artist_name, song_title, user_first_name, user_last_name)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s, %s)\"\n",
+    "        session.execute(query, (int(line[10]), int(line[8]), line[0], line[9], line[1], line[4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 182 Lonnie Gordon Catch You Baby (Steve Pitron & Max Sanna Radio Edit) Sylvie Cruz\n"
+     ]
+    }
+   ],
+   "source": [
+    "# verify the data was entered into the table\n",
+    "\n",
+    "query = \"select * from song_in_user_session WHERE user_id=10 AND session_id=182\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print (row.user_id, row.session_id, row.artist_name, row.song_title, row.user_first_name, row.user_last_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query 3\n",
+    "##### Give every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
    ]
   },
   {
@@ -386,11 +439,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
+    "# create table\n",
     "\n",
+    "query = \"CREATE TABLE IF NOT EXISTS song_in_session \"\n",
+    "query = query + \"(session_id INT, item_in_session INT, artist_name VARCHAR, song_title VARCHAR, song_duration DECIMAL, \\\n",
+    "PRIMARY KEY (session_id, item_in_session))\"\n",
     "\n",
-    "                    "
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)               "
    ]
   },
   {
@@ -399,10 +457,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "# insert data\n",
     "\n",
+    "file = 'event_datafile_new.csv'\n",
     "\n",
-    "                    "
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "        query = \"INSERT INTO song_in_session (session_id, item_in_session, artist_name, song_title, song_duration)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s)\"\n",
+    "        session.execute(query, (int(line[8]), int(line[3]), line[0], line[9], float(line[5])))"
    ]
   },
   {
@@ -410,29 +475,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# verify the data was entered into the table\n",
+    "\n",
+    "query = \"select * from song_in_session WHERE session_id=338 AND item_in_session=4\"\n",
+    "try:\n",
+    "    rows = session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print (row.session_id, row.item_in_session, row.artist_name, row.song_title, row.song_duration)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Drop the tables before closing out the sessions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
    ]
   },
   {
@@ -469,20 +529,6 @@
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
