--- a/p2_data_modeling_cassandra/cassandra_etl.ipynb
+++ b/p2_data_modeling_cassandra/cassandra_etl.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {
     "scrolled": false
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
@@ -337,7 +337,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Faithless Music Matters (Mark Knight Dub) 495.3073\n"
+      "artist: Faithless\n",
+      "song: Music Matters (Mark Knight Dub)\n",
+      "duration: 495.3073\n",
+      "\n"
      ]
     }
    ],
@@ -351,7 +354,7 @@
     "    print(e)\n",
     "    \n",
     "for row in rows:\n",
-    "    print (row.artist_name, row.song_title, row.song_duration)"
+    "    print ('artist: {}\\nsong: {}\\nduration: {}\\n'.format(row.artist_name, row.song_title, row.song_duration))"
    ]
   },
   {
@@ -364,15 +367,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create table\n",
     "\n",
     "query = \"CREATE TABLE IF NOT EXISTS song_in_user_session \"\n",
-    "query = query + \"(user_id INT, session_id INT, artist_name VARCHAR, song_title VARCHAR, user_first_name VARCHAR, \\\n",
-    "user_last_name VARCHAR, PRIMARY KEY (user_id, session_id))\"\n",
+    "query = query + \"(user_id INT, session_id INT, item_in_session INT, artist_name VARCHAR, song_title VARCHAR, user_first_name VARCHAR, \\\n",
+    "user_last_name VARCHAR, PRIMARY KEY (user_id, session_id, item_in_session))\"\n",
     "\n",
     "try:\n",
     "    session.execute(query)\n",
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,21 +397,36 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "        query = \"INSERT INTO song_in_user_session (user_id, session_id, artist_name, song_title, user_first_name, user_last_name)\"\n",
-    "        query = query + \"VALUES (%s, %s, %s, %s, %s, %s)\"\n",
-    "        session.execute(query, (int(line[10]), int(line[8]), line[0], line[9], line[1], line[4]))"
+    "        query = \"INSERT INTO song_in_user_session (user_id, session_id, item_in_session, artist_name, song_title, user_first_name, user_last_name)\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
+    "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lonnie Gordon Catch You Baby (Steve Pitron & Max Sanna Radio Edit) Sylvie Cruz\n"
+      "artist: Down To The Bone\n",
+      "song: Keep On Keepin' On\n",
+      "user: Sylvie Cruz\n",
+      "\n",
+      "artist: Three Drives\n",
+      "song: Greece 2000\n",
+      "user: Sylvie Cruz\n",
+      "\n",
+      "artist: Sebastien Tellier\n",
+      "song: Kilometer\n",
+      "user: Sylvie Cruz\n",
+      "\n",
+      "artist: Lonnie Gordon\n",
+      "song: Catch You Baby (Steve Pitron & Max Sanna Radio Edit)\n",
+      "user: Sylvie Cruz\n",
+      "\n"
      ]
     }
    ],
@@ -422,7 +440,10 @@
     "    print(e)\n",
     "    \n",
     "for row in rows:\n",
-    "    print (row.artist_name, row.song_title, row.user_first_name, row.user_last_name)"
+    "    print ('artist: {}\\nsong: {}\\nuser: {} {}\\n'.format(row.artist_name, \\\n",
+    "                                                                      row.song_title, \\\n",
+    "                                                                      row.user_first_name, \n",
+    "                                                                      row.user_last_name))"
    ]
   },
   {
@@ -435,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,16 +493,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jacqueline Lynch\n",
-      "Tegan Levine\n",
-      "Sara Johnson\n"
+      "user: Jacqueline Lynch\n",
+      "\n",
+      "user: Tegan Levine\n",
+      "\n",
+      "user: Sara Johnson\n",
+      "\n"
      ]
     }
    ],
@@ -495,7 +519,7 @@
     "    print(e)\n",
     "    \n",
     "for row in rows:\n",
-    "    print (row.user_first_name, row.user_last_name)"
+    "    print ('user: {} {}\\n'.format(row.user_first_name, row.user_last_name))"
    ]
   },
   {
@@ -507,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
